--- a/style/main.css
+++ b/style/main.css
@@ -13,3 +13,10 @@
 .card-col{
     margin-top: 20px;
 }
+
+.device-contents .row .col-12{
+    margin-bottom:20px;
+    border-bottom:1px solid #cccccc;
+    background-color: yellow;
+    padding: 10px;
+}
