--- a/style/main.css
+++ b/style/main.css
@@ -54,7 +54,7 @@ footer{
 
 .deviceItem[namespace='videoDevice']{
     background-color: #05386B;
-    color:#467199;
+    color:#b7c4d0;
 }
 
 .deviceItem[namespace='hardDisk']{
